--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.5.6",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "request": "2.81.0",
+    "superagent": "3.5.2"
   },
   "repository": {
     "type": "git",
